Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80609

[REG: 5.13 -> 5.14] QSequentialIterable crashes in 5.14

XMLWordPrintable

    • ea3bfc91e2a0fc8309f75e960f1891f15d7351c9 (qt/qtdeclarative/5.14)

      When trying to use a QSequentialIterable retrieved from a QVariant with a container inside (std::vector, QVector, or QList), assigned as a property binding, it results in a segfault.

      QVariant::canConvert(QVariantList) returns true so QVariant::value<QSequentialIterable>() should return a valid QSequentialIterable.

      Attached is a test case reproducing the crash.

      Note that QVariant::typeName returns the correct name in 5.13, but gives QJSValue in 5.14.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fabiankosmale Fabian Kosmale
            grecko Pierre-Yves Siret
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes